# rayspy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: glad.c.D8BF7C27307D1F64.idx  glad.h.01F2090C18072B9C.idx  khrplatform.h.52E4A8EE0B8A668A.idx  main.cpp.4025B733E1EA803D.idx  shader.cpp.88CC5780C8FAA35C.idx  shader.hpp.664BDD470ED76C69.idx
include/glad/: glad.h
shaders/: SimpleVertexShader.txt
src/: SimpleFragmentShader.txt  glad.c  main.cpp
src/common/: shader.cpp  shader.hpp
